@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2003, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2003, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -61,7 +61,7 @@ import java.util.Set;
  *
  * @library /test/lib
  *
- * @run main/othervm/timeout=300 RmiBootstrapTest .*_test.*.in
+ * @run main/othervm/timeout=300 -Djava.security.manager=allow RmiBootstrapTest .*_test.*.in
  * */
 
 /*
@@ -72,7 +72,7 @@ import java.util.Set;
  *
  * @library /test/lib
  *
- * @run main/othervm/timeout=300 RmiBootstrapTest .*_ssltest.*.in
+ * @run main/othervm/timeout=300 -Djava.security.manager=allow RmiBootstrapTest .*_ssltest.*.in
  * */
 
 /**
